Running deploy.sh

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vancouverwalk.com</title>
+    <title>vancouverwalk</title>
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="favicon.png" sizes="512x512" type="image/png">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="/"><i class="fas fa-walking"></i> vancouverwalk.com</a>
+            <a href="/"><i class="fas fa-walking"></i> vancouverwalk</a>
         </div>
         <div id="route-name"></div>
         <nav>
