Running deploy.sh

--- a/index.html
+++ b/index.html
@@ -31,31 +31,26 @@
     <div id="about-modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Metro Vancouver is meant to be explored on foot.</h2>
+                <h2>Exploring our city. On foot.</h2>
                 <span class="close">&times;</span>
             </div>
             <div class="modal-body">
                 <!-- Page 1 Content -->
                 <div id="about-page-1">
-                    <p>Back in January 2023, we set out with a simple goal: to experience our city in a new way.
-                    Every Sunday, regardless of the weather, we plan a route and get out and walk.
-                    These routes take us through a mix of the city’s streets, hidden trails, and scenic views.
-                    Each one offers a fresh perspective on Vancouver’s rich and diverse landscape.
-                    Walks aren’t just about getting in steps.
-                    They’re about reconnecting—with your surroundings, and with the people walking beside you.
-                    And yes, we often let our stomachs lead the way—we often find incredible places to grab a bite along our journey.</p>
-                    <br />
-                    <p>Whether you’ve lived here forever or you’re just passing through, these walks show you a side of the city that’s off the beaten path.</p>
+                    <p>In January 2023, we set out to experience Vancouver in a new way. Every Sunday, rain or shine, we'd map out and walk a ~12km route, weaving through neighborhoods, streets, and trails.</p>
+                    <p>It's almost been two years and we're still at it! Why? Because we love getting outside and having deep, multi-hour conversations while stumbling upon local gems like eateries, scenic spots, markets, and art displays.</p>                   
+                    <p>Follow our journey, and maybe find inspiration to explore your own surroundings. Whether you’re a longtime resident or a visitor, these walks reveal a side of your city that’s off the beaten path. Click on this card to reveal some stats.</b></p>
                 </div>
                 <!-- Page 2 Content -->
                 <div id="about-page-2" style="display: none;">
-                    <p>Explore more with us! Join our community walks every weekend and discover hidden gems in Vancouver. Stay tuned for upcoming events and routes. We believe in making connections and embracing the journey together.</p>
+                    <div class="flourish-embed" data-src="story/2625322" />
                 </div>
             </div>
         </div>
     </div>
     
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js"></script>
+    <script src="https://public.flourish.studio/resources/embed.js"></script>
     <script src="js/config.js"></script>
     <script src="js/app.js"></script>
 </body>
