Running deploy.sh

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             <div class="modal-body">
                 <!-- Page 1 Content -->
                 <div id="about-page-1">
-                    <p>In January 2023, we set out to experience Vancouver in a new way. Every Sunday, rain or shine, we'd map out and walk a ~12km route, weaving through neighborhoods, streets, and trails.</p>
-                    <p>It's almost been two years and we're still at it! Why? Because we love getting outside and having deep, multi-hour conversations while stumbling upon local gems like eateries, scenic spots, markets, and art displays.</p>                   
-                    <p>Follow our journey, and maybe find inspiration to explore your own surroundings. Whether you’re a longtime resident or a visitor, these walks reveal a side of your city that’s off the beaten path. Click on this card to reveal some stats.</b></p>
+                    <p>In January 2023, we set out to experience Vancouver in a new way. Every Sunday, rain or shine, we'd plan and walk a ~12km route, weaving through neighborhoods, streets, and trails.</p>
+                    <p>It's almost been two years and we're still at it! Why? Because we love getting outside and having multi-hour conversations while stumbling upon local gems like eateries, scenic spots, markets, and art displays.</p>                   
+                    <p>Follow our journey, and maybe find inspiration to explore your own surroundings. Whether you’re a longtime resident or a visitor, these walks reveal a side of your city that’s off the beaten path!</p>
+                    <p>Click on this card to reveal some stats.</b></p>
                 </div>
                 <!-- Page 2 Content -->
                 <div id="about-page-2" style="display: none;">
@@ -49,9 +50,9 @@
         </div>
     </div>
     
-    <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js"></script>
-    <script src="https://public.flourish.studio/resources/embed.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://public.flourish.studio/resources/embed.js" defer></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js" defer></script>
+    <script src="js/config.js" defer></script>
+    <script src="js/app.js" defer></script>
 </body>
 </html>
