Running deploy.sh

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div id="about-page-1">
                     <p>In January 2023, we set out to experience Vancouver in a new way. Every Sunday, rain or shine, we'd plan and walk a ~12km route, weaving through neighborhoods, streets, and trails.</p>
                     <p>It's almost been two years and we're still at it! Why? Because we love getting outside and having multi-hour conversations while stumbling upon local gems like eateries, scenic spots, markets, and art displays.</p>                   
-                    <p>Follow our journey, and maybe find inspiration to explore your own surroundings. Whether you’re a longtime resident or a visitor, these walks reveal a side of your city that’s off the beaten path!</p>
+                    <p>Check out our journey, and maybe find inspiration to explore your own surroundings. Whether you’re a longtime resident or a visitor, these walks reveal a side of the city that’s off the beaten path!</p>
                     <p>Click on this card to reveal some stats.</b></p>
                 </div>
                 <!-- Page 2 Content -->
