--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vancouverwalk</title>
+
+    <title>vancouverwalk.com - Explore Metro Vancouver on Foot</title>
+
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" sizes="512x512"  href="favicon.png">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="shortcut icon" href="favicon.ico">
+
+    <!-- SEO meta tags -->
+    <meta name="description" content="Discover Metro Vancouver's hidden gems through curated walking routes.">
+    <meta name="keywords" content="Vancouver, walking routes, urban exploration, hiking, city trails">
+    
+    <!-- Open Graph / Facebook meta tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://vancouverwalk.com/">
+    <meta property="og:title" content="vancouverwalk.com - Explore Metro Vancouver on Foot">
+    <meta property="og:description" content="Discover Metro Vancouver's hidden gems through curated walking routes.">
+    <meta property="og:image" content="https://vancouverwalk.com/og-image.jpg">
+
+    <!-- Twitter meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://vancouverwalk.com/">
+    <meta name="twitter:title" content="vancouverwalk.com - Explore Metro Vancouver on Foot">
+    <meta name="twitter:description" content="Discover Metro Vancouver's hidden gems through curated walking routes.">
+    <meta name="twitter:image" content="https://vancouverwalk.com/twitter-image.jpg">
 </head>
 <body>
     <header>
@@ -38,7 +58,7 @@
                 <!-- Page 1 Content -->
                 <div id="about-page-1">
                     <p>In January 2023, we set out to experience Vancouver in a new way. Every Sunday, rain or shine, we'd plan and walk a ~12km route, weaving through neighborhoods, streets, and trails.</p>
-                    <p>It's almost been two years and we're still at it! Why? Because we love getting outside and having multi-hour conversations while stumbling upon local gems like eateries, scenic spots, markets, and art displays.</p>                   
+                    <p>It's almost been two years and we're still at it! Why? Because we love getting outside and having long conversations while stumbling upon local gems like eateries, scenic spots, and farmers markets.</p>                   
                     <p>Check out our journey, and maybe find inspiration to explore your own surroundings. Whether you’re a longtime resident or a visitor, these walks reveal a side of the city that’s off the beaten path!</p>
                     <p>Click on this card to reveal some stats.</b></p>
                 </div>
