Running deploy.sh

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         </div>
     </div>
 
-    <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js" defer></script>
-    <script src="https://public.flourish.studio/resources/embed.js" defer></script>
-    <script src="js/config.js" defer></script>
-    <script src="js/app.js" defer></script>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/app.js"></script>
+    <script src="https://public.flourish.studio/resources/embed.js"></script>
 </body>
 </html>
