Running deploy.sh

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
           <div id="about-page-1">
             <p>
               In January 2023, we set out to experience Vancouver in a new way.
-              Every Sunday, rain or shine, we'd plan and walk a ~12km route,
-              weaving through neighborhoods, streets, and trails.
+              Every Sunday, rain or shine, we plan and walk a 10+ km route that
+              weaves through neighborhoods, streets, and trails.
             </p>
             <p>
-              It's almost been two years and we're still at it! Why? Because we
+              It has been two years and we're still at it! Why? Because we
               love getting outside and having long conversations while stumbling
               upon local gems like eateries, scenic spots, and farmers markets.
             </p>
