Running deploy.sh

--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
           <div id="about-page-1">
             <p>
               In January 2023, we set out to experience Vancouver in a new way.
-              Every Sunday, rain or shine, we plan and walk a 10+ km route that
-              weaves through neighborhoods, streets, and trails.
+              Every Sunday, rain or shine, we'd plan and walk a 10+ km route that
+              weaved through neighborhood streets and trails.
             </p>
             <p>
               It has been two years and we're still at it! Why? Because we
               love getting outside and having long conversations while stumbling
-              upon local gems like eateries, scenic spots, and farmers markets.
+              upon local gems like eateries and scenic viewpoints!
             </p>
             <p>
               Check out our journey, and maybe find inspiration to explore your
-              own surroundings. Whether you’re a longtime resident or a visitor,
+              surroundings. Whether you’re a longtime resident or a visitor,
               these walks reveal a side of the city that’s off the beaten path!
             </p>
             <p>Click on this card to reveal some stats.</p>
