--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
           <div id="about-page-1">
             <p>
               In January 2023, we set out to experience Vancouver in a new way.
-              Every Sunday, rain or shine, we'd plan and walk a 10+ km route that
-              weaved through neighborhood streets and trails.
+              Every Sunday, rain or shine, we plan and walk a 10+ km route that
+              weaves through neighborhoods, parks, streets and trails.
             </p>
             <p>
               It has been two years and we're still at it! Why? Because we
-              love getting outside and having long conversations while stumbling
-              upon local gems like eateries and scenic viewpoints!
+              love getting outside, having long chats and finding
+              local gems like eateries and scenic viewpoints!
             </p>
             <p>
               Check out our journey, and maybe find inspiration to explore your
